--- a/index.html
+++ b/index.html
@@ -1,8 +1,64 @@
+
+<!DOCTYPE html>
 <html>
-    <body>
-        <table>
-            <tr>Pizza shop 2.0</tr>
-            
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab3 Form</title>
+</head>
+
+<body>
+    <h2>Fighto-Siripong</h2>
+    <form action="">
+        <table border="1" width="300px">
+            <tr>
+                <th align="center" colspan="2"><h2>Pizza Shop 2.0 </h2></th>
+            </tr>
+            <tr>
+                <td align="right" width="100px"><label>Name: </label></td>
+                <td align="left"><input type="text" id="Name" name="Name" value="Tony"></td>
+            </tr>
+            <tr>
+                <td align="right"><label>Pizza Topping: </label></td>
+                <td align="left">
+                    <input type="radio" id="Topping" name="Topping" value="1">
+                    <label>Supreme</label><br>
+                    <input type="radio" id="Topping" name="Topping" value="2">
+                    <label>Vegetarian</label><br>
+                    <input type="radio" id="Topping" name="Topping" value="3">
+                    <label>Hawaiian</label>
+                </td>
+            </tr>
+            <tr>
+                <td align="right"><label>Pizza Sauce: </label></td>
+                <td align="left">
+                    <select id="select" name="select">
+                        <option value="Tomato">Tomato</option>
+                        <option value="aaaa">aaaa</option>
+                        <option value="bbbb">bbbb</option>
+                        <option value="cccc">cccc</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td align="right"><label>Optional Extras: </label></td>
+                <td align="left">
+                    <input type="checkbox" id="vehicle1" name="vehicle1" value="1">
+                    <label>Extra Cheese</label><br>
+                    <input type="checkbox" id="vehicle2" name="vehicle2" value="2">
+                    <label>Gluten Free Base</label>
+                </td>
+            </tr>
+            <tr>
+                <td align="left" colspan="2"><label>Delivery Instructions: </label></td>
+            </tr>
+            <tr>
+                <td align="left" colspan="2"><textarea name="message" rows="5" cols="100%"></textarea></td>
+            </tr>
+            <tr>
+                <td align="left" colspan="2"><input type="submit" value="Send my Order"></td>
+            </tr>
         </table>
-    </body>
+    </form> 
+</body>
 </html>
