--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-    <h2>Fighto-Siripong</h2>
     <form action="">
         <table border="1" width="300px">
             <tr>
@@ -16,7 +15,7 @@
             </tr>
             <tr>
                 <td align="right" width="100px"><label>Name: </label></td>
-                <td align="left"><input type="text" id="Name" name="Name" value="Tony"></td>
+                <td align="left"><input type="text" id="Name" name="Name" value=""></td>
             </tr>
             <tr>
                 <td align="right"><label>Pizza Topping: </label></td>
