Update Pizza Shop

--- a/index.html
+++ b/index.html
@@ -6,57 +6,44 @@
     <title>Pizza Shop</title>
 </head>
 
-<body>
-    <form action="">
-        <table border="2" width="300px">
-            <tr>
-                <th align="center" colspan="2"><h3>Pizza Shop 2.0 </h3></th>
-            </tr>
-            <tr>
-                <td align="left" width="200px"><label>Name: </label></td>
-                <td align="left"><input type="text" id="Name" name="Name" value=""></td>
-            </tr>
-            <tr>
-                <td align="left"><label>Pizza Topping: </label></td>
-                <td align="left">
-                    <input type="radio" id="Topping" name="Topping" value="1">
-                    <label>Supreme</label><br>
-                    <input type="radio" id="Topping" name="Topping" value="2">
-                    <label>Vegetarian</label><br>
-                    <input type="radio" id="Topping" name="Topping" value="3">
-                    <label>Hawaiian</label>
-                </td>
-            </tr>
-            <tr>
-                <td align="left"><label>Pizza Sauce: </label></td>
-                <td align="left">
-                    <select id="select" name="select">
-                        <option value="Tomato">Tomato</option>
-                        <option value="A">A</option>
-                        <option value="B">B</option>
-                        <option value="C">C</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td align="left"><label>Optional Extras: </label></td>
-                <td align="left">
-                    <input type="checkbox" id="vehicle1" name="vehicle1" value="1">
-                    <label>Extra Cheese</label>
-                    <input type="checkbox" id="vehicle2" name="vehicle2" value="2">
-                    <label>Gluten Free Base</label>
-                </td>
-            </tr>
-            <tr>
-                <td align="left" colspan="2"><label>Delivery Instructions: </label></td>
-            </tr>
-            <tr>
-                <td align="left" colspan="2"><textarea name="message" rows="3" cols="100%"></textarea></td>
-            </tr>
-            <tr>
-                <td align="left" colspan="2"><input type="submit" value="Send my Order"></td>
-            </tr>
-        </table>
-    </form> 
+<body><h3>Fighto - Kritsana</h3>
+    <table border="1" width="300px">
+        <tr>
+            <td align="center" colspan="2"><b>Pizza Shop 2.0</b></td>
+        </tr>
+        <tr>
+            <td align="left">Name</td>
+            <td align="left"><input type="text" name="name"></input></td>
+        </tr>
+        <tr>
+            <td align="left">Pizza Topping</td>
+            <td align="left">
+                <input type="radio" name="topping" value="supreme">Supreme</input><br>
+                <input type="radio" name="topping" value="vegetarian">Vegetarian</input><br>
+                <input type="radio" name="topping" value="hawaiian">Hawaiian</input>
+            </td>
+        </tr>
+        <tr>
+            <td align="left">Pizza Sauce</td>
+            <td align="left"><select name="sauce">
+                <option value="tomato">Tomato</option>
+                <option value="barbeque">Barbeque</option>
+                <option value="mayonnaise">Mayonnaise</option>
+                <option value="secret">Secret Sauce</option>
+              </select></td>
+        </tr>
+        <tr>
+            <td align="left">Optional Extras</td>
+            <td><input type="checkbox" name="extra_cheese" value="1">Extra Cheese</input>
+                <input type="checkbox" name="gluten_free" value="1">Gluten Free Base</input></td>
+        </tr>
+        <tr>
+            <td align="left" colspan="2">Delivery Instructions : <br>
+                <textarea name="delivery" cols="50" rows="4"></textarea></td>
+        </tr>
+        <tr>
+            <td align="left" colspan="2"><input type="submit" value="Send my Order"></td>
+        </tr>
+    </table>
 </body>
 </html>
